<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background">

    <RelativeLayout
        android:id="@+id/checkin_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10sp"
            android:fontFamily="sans-serif"
            android:text="@string/mobile_check_in"
            android:textAlignment="center"
            android:textColor="@color/brownish_grey"
            android:textSize="22sp" />


        <LinearLayout
            android:id="@+id/lyt_name"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_header"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/brownish_grey"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/et_fst_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:fontFamily="@font/gotham_light"
                    android:hint="@string/first_name"
                    android:paddingStart="5sp"
                    app:backgroundTint="@color/brownish_grey"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/brownish_grey"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/brownish_grey"
                android:layout_weight="1">

                <EditText
                    app:backgroundTint="@color/brownish_grey"
                    android:id="@+id/et_lst_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:fontFamily="@font/gotham_light"
                    android:textColorHint="@color/brownish_grey"
                    android:textColor="@color/white"
                    android:hint="@string/last_name"
                    android:paddingStart="5sp"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_mb_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lyt_name"
            android:textColorHint="@color/brownish_grey"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp">

            <EditText
                app:backgroundTint="@color/brownish_grey"
                android:id="@+id/et_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:fontFamily="@font/gotham_light"
                android:textColorHint="@color/brownish_grey"
                android:textColor="@color/white"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:paddingStart="5sp"
                android:singleLine="true"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_mail"
            android:textColorHint="@color/brownish_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_mb_no"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp">

            <EditText
                app:backgroundTint="@color/brownish_grey"
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:fontFamily="@font/gotham_light"
                android:textColorHint="@color/brownish_grey"
                android:textColor="@color/white"
                android:hint="@string/email"
                android:paddingStart="5sp"
                android:singleLine="true"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_mail"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/brownish_grey"
            android:layout_marginRight="10dp">

            <EditText
                app:backgroundTint="@color/brownish_grey"
                android:id="@+id/et_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:focusable="false"
                android:fontFamily="@font/gotham_light"
                android:textColorHint="@color/brownish_grey"
                android:textColor="@color/white"
                android:hint="@string/date_of_birth"
                android:paddingStart="5sp"
                android:singleLine="true"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_nationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_dob"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/brownish_grey"
            android:layout_marginRight="10dp">

            <EditText
                app:backgroundTint="@color/brownish_grey"
                android:id="@+id/et_nationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/gotham_light"
                android:textColorHint="@color/brownish_grey"
                android:textColor="@color/white"
                android:hint="@string/nationality"
                android:paddingStart="5sp"
                android:singleLine="true"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:background="@drawable/et_border_brown"
            android:nestedScrollingEnabled="false"
            android:layout_below="@+id/tv_nationality"
            android:layout_marginBottom="10dp"
            android:id="@+id/dync_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


        <TextView
            android:id="@+id/tv_kyc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dync_recycler"
            android:layout_marginTop="5dp"
            android:background="@color/brownish_grey"
            android:paddingLeft="22dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/kyc"
            android:textColor="@color/black" />

        <!--  <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/tv_document_type"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@+id/tv_kyc"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="10dp"
              android:textColorHint="@color/brownish_grey"
              android:layout_marginRight="10dp">

              <EditText
                  app:backgroundTint="@color/brownish_grey"
                  android:id="@+id/et_document_type"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="10sp"
                  android:fontFamily="sans-serif"
                  android:textColor="@color/white"
                  android:hint="@string/document_type"
                  android:paddingStart="5sp"
                  android:singleLine="true"
                  android:textSize="16sp" />
          </com.google.android.material.textfield.TextInputLayout>-->



        <Spinner
            android:layout_below="@+id/tv_kyc"
            android:id="@+id/et_document_type"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:dropDownWidth="match_parent"
            android:textColor="@color/white"
            android:overlapAnchor="false"
            android:background="@drawable/et_border_brown"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_document_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_document_type"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/brownish_grey"
            android:layout_marginRight="10dp">

            <EditText
                app:backgroundTint="@color/brownish_grey"
                android:id="@+id/et_document_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:hint="@string/document_number"
                android:paddingStart="5sp"
                android:singleLine="true"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_attachments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_document_number"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/brownish_grey"
            android:layout_marginRight="10dp"
            android:paddingLeft="8dp"
            android:text="@string/attachments" />
        <LinearLayout
            android:id="@+id/lyt_upload"
            android:layout_below="@+id/tv_attachments"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:padding="2dp"
                android:background="@drawable/et_border_brown"
                android:id="@+id/iv_upload"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_upload" />
            <TextView
                android:textColor="@color/brownish_grey"
                android:layout_marginStart="10dp"
                android:text="@string/upload"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@+id/tv_attachments"
            android:layout_toEndOf="@+id/lyt_upload"
            android:id="@+id/mobile_checkin_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_continue"
            android:layout_margin="40dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/lyt_upload"
            android:background="@color/brownish_grey"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/continu"/>
    </RelativeLayout>


</ScrollView>